class Ascuas
{
private:
    /* data */
public:
    Ascuas(/* args */) {}
    ~Ascuas() {}
};