class Bicicleta
{
private:
    /* data */
public:
    Bicicleta(/* args */) {}
    ~Bicicleta() {}
};