class Bulbasaur
{
private:
    /* data */
public:
    Bulbasaur(/* args */) {}
    ~Bulbasaur() {}
};