class Burbuja
{
private:
    /* data */
public:
    Burbuja(/* args */) {}
    ~Burbuja() {}
};