class Drenadoras
{
private:
    /* data */
public:
    Drenadoras(/* args */) {}
    ~Drenadoras() {}
};