class Impactrueno
{
private:
    /* data */
public:
    Impactrueno(/* args */) {}
    ~Impactrueno() {}
};