class Squirtle
{
private:
    /* data */
public:
    Squirtle(/* args */) {}
    ~Squirtle() {}
};